@@ -125,6 +125,7 @@ fn make_option() -> Result<Options> {
     comment_char: ';',
     lisp_vline_symbols: false,
     lisp_block_comment: false,
+    scheme_sexp_comment: false,
     janet_long_strings: false,
   })
 }
@@ -158,6 +159,7 @@ fn new_options(
     comment_char: ';',
     lisp_vline_symbols: false,
     lisp_block_comment: false,
+    scheme_sexp_comment: false,
     janet_long_strings: false,
   })
 }
