@@ -148,6 +148,8 @@ struct Options {
     #[serde(skip_serializing_if = "Option::is_none")]
     lisp_block_comment: Option<bool>,
     #[serde(skip_serializing_if = "Option::is_none")]
+    scheme_sexp_comment: Option<bool>,
+    #[serde(skip_serializing_if = "Option::is_none")]
     janet_long_strings: Option<bool>,
 }
 
@@ -282,6 +284,7 @@ pub fn composed_unicode_graphemes_count_as_a_single_character() {
             changes: None,
             lisp_vline_symbols: None,
             lisp_block_comment: None,
+            scheme_sexp_comment: None,
             janet_long_strings: None,
             prev_cursor_x: None,
             prev_cursor_line: None
@@ -325,6 +328,7 @@ pub fn graphemes_in_changes_are_counted_correctly() {
             ]),
             lisp_vline_symbols: None,
             lisp_block_comment: None,
+            scheme_sexp_comment: None,
             janet_long_strings: None,
             prev_cursor_x: None,
             prev_cursor_line: None
@@ -368,6 +372,7 @@ pub fn wide_characters() {
             ]),
             lisp_vline_symbols: None,
             lisp_block_comment: None,
+            scheme_sexp_comment: None,
             janet_long_strings: None,
             prev_cursor_x: None,
             prev_cursor_line: None
@@ -404,6 +409,7 @@ pub fn lisp_vline_symbols() {
             changes: None,
             lisp_vline_symbols: Some(true),
             lisp_block_comment: None,
+            scheme_sexp_comment: None,
             janet_long_strings: None,
             prev_cursor_x: None,
             prev_cursor_line: None
@@ -440,6 +446,7 @@ pub fn lisp_sharp_syntax_backtrack() {
             changes: None,
             lisp_vline_symbols: None,
             lisp_block_comment: Some(true),
+            scheme_sexp_comment: None,
             janet_long_strings: None,
             prev_cursor_x: None,
             prev_cursor_line: None
@@ -476,6 +483,7 @@ pub fn lisp_block_comment() {
             changes: None,
             lisp_vline_symbols: None,
             lisp_block_comment: Some(true),
+            scheme_sexp_comment: None,
             janet_long_strings: None,
             prev_cursor_x: None,
             prev_cursor_line: None
@@ -483,6 +491,43 @@ pub fn lisp_block_comment() {
     };
     let input = json!({
         "mode": "paren",
+        "text": &case.text,
+        "options": &case.options
+    }).to_string();
+    let answer: serde_json::Value = serde_json::from_str(&run(&input)).unwrap();
+    case.check2(answer);
+}
+
+#[test]
+pub fn scheme_sexp_comment() {
+    let case = Case {
+        text: String::from("'(#; (ignored here) not ignored"),
+        result: CaseResult {
+            text: String::from("'(#; (ignored here) not ignored)"),
+            success: true,
+            error: None,
+            cursor_x: None,
+            cursor_line: None,
+            tab_stops: None,
+            paren_trails: None
+        },
+        source: Source {
+            line_no: 0
+        },
+        options: Options {
+            cursor_x: None,
+            cursor_line: None,
+            changes: None,
+            lisp_vline_symbols: None,
+            lisp_block_comment: None,
+            scheme_sexp_comment: Some(true),
+            janet_long_strings: None,
+            prev_cursor_x: None,
+            prev_cursor_line: None
+        }
+    };
+    let input = json!({
+        "mode": "indent",
         "text": &case.text,
         "options": &case.options
     }).to_string();
@@ -512,6 +557,7 @@ pub fn janet_long_strings() {
             changes: None,
             lisp_vline_symbols: None,
             lisp_block_comment: None,
+            scheme_sexp_comment: None,
             janet_long_strings: Some(true),
             prev_cursor_x: None,
             prev_cursor_line: None
